# dvc_example

./: .gitignore  data_reformat.dvc  pyproject.toml
data/: .gitignore  mortgage_csv.rar.dvc
src/: data_reformat.py  data_wrangle.py
