[tool.poetry]
name = "dvc_example"
version = "0.1.0"
description = "Example of using DVC in credit risk modelling."
authors = ["Pieter van den Berg"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
pandas = "^0.25.3"
pyarrow = "^0.15.1"
rarfile = "^3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
