[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "Example of using git+dvc+pytest+poetry+sphinx+pweave+... in a python (credit risk modelling) project."
authors = ["Pieter van den Berg"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
pandas = "^0.25.3"
pyarrow = "^0.15.1"
rarfile = "^3.1"
pweave = "^0.30.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
